<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".About">

        <LinearLayout
            android:id="@+id/hoho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:maxWidth="130dp"
                android:maxHeight="130dp"
                android:src="@drawable/qrcodelogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:text="Scan It !"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold|italic" />


        </LinearLayout>

        <TextView
            android:id="@+id/txt_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hoho"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:text="@string/reserved"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_penjelasan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_reserved"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:text="@string/penjelasan"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_menu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_penjelasan"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_scan"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="Scan QR Code"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_menu1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/desc1"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_desc12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/desc12"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_desc13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc12"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/desc13"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc13"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_generate"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="Generate QR Code"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_desc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_menu2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/desc2"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_desc22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/desc22"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_desc23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/desc22"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_desc23"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:text="@string/tutor"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tutor"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/feedback"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/about_btn_kembali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_feedback"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_background"
            android:text="Kembali"
            android:textColor="#fff" />
    </RelativeLayout>
</ScrollView>